--- a/tfrec/Dockerfile
+++ b/tfrec/Dockerfile
@@ -1,3 +1,9 @@
 FROM python
+
+RUN pip install tensorflow==1.14.0
 RUN pip install numpy==1.16.2
+RUN pip install pandas
+RUN pip install scipy
+RUN pip install -U scikit-learn
+
 COPY ./src /
